test/e2e/data/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-http
  namespace: default
spec:
  ingressClassName: ngrok # This ingress in intended to be used only with ngrok
  rules:
  - host: gitea.${RANCHER_HOSTNAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-http
            port:
              number: 3000
