test/e2e/data/gitea/test-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-nodeport
  namespace: gitea
spec:
  type: NodePort
  selector:
    app: gitea
  ports:
  - nodePort: 30001
    port: 3000
    protocol: TCP
    targetPort: 3000
